--- a/sara_jenny/style.css
+++ b/sara_jenny/style.css
@@ -96,6 +96,15 @@ body {
 
 header {
     position: relative;
+
+    /*Fade in Header*/
+    opacity: 0;
+    transition-property: opacity;
+    transition-duration: 1.2s;
+}
+
+header.fade {
+    opacity: 1;
 }
 
 .hat {
@@ -105,6 +114,20 @@ header {
     right: 100px;
     top: 10px;
 }
+
+/*Fade in Text/Button*/
+.container {
+    opacity: 0;
+    transition-property: opacity;
+    transition-duration: 1.2s;
+
+}
+
+.container.fade {
+    opacity: 1;
+}
+
+
 
 /*MEDIA QUERIES---> Bitte möglichst unten lassen, so überschreiben wir sie nicht ausversehen!*/
 
@@ -168,4 +191,3 @@ header {
         overflow: hidden;
     }     
     }
-}
