--- a/sara_jenny/style.css
+++ b/sara_jenny/style.css
@@ -85,15 +85,39 @@ p{ /*ist Schrift p2 in Figma*/
 }
 
 /*Button default für mobile Styling*/
+#APIButtonMobile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='473' height='96' viewBox='0 0 473 96'><path d='M87 0L0 48.5L87 95.5H384.5L473 48.5L384.5 0H87Z' fill='%23634832'/></svg>");
+    background-repeat: no-repeat;
+    background-size: contain;      
+    background-position: center;
+    background-color: transparent;
+    border: none;
+    width: 302px;
+    height: 53px;
+    flex-shrink: 0;
+}
 
 
-/*Karte im Hintergrund für Spells*/
-.cardForSpells {
+/*Karte im Hintergrund für Spells, für Desktopgrösse und Tabletgrösse*/
+#cardForSpells {
     background-image: url(img/card.jpg);
     width: 664px;
     height: 436px;
     flex-shrink: 0;
     aspect-ratio: 166/109;
+}
+
+/*Karte im Hintergrund für Spells, Mobile Version*/
+#cardForSpellsMobile {
+    background-image: url(img/card.jpg);
+    width: 418px;
+    height: 275px;
+    transform: rotate(90deg);
+    flex-shrink: 0;
+    aspect-ratio: 38/25;
 }
 
 /*Backgorund Hogwarts*/
