--- a/sara_jenny/style.css
+++ b/sara_jenny/style.css
@@ -126,7 +126,7 @@ body {
 /*HEADER STYLING*/
 
 header {
-    position: fixed;
+    position: relative;
     height: 160px;
     width: 100%;
 
@@ -157,6 +157,7 @@ header.fade {
 }
 
 @keyframes hatAnimation {
+   
     0% {
         transform: translateX(0) rotate(0deg);
     }
@@ -176,6 +177,10 @@ header.fade {
     70% {
         transform: translateX(0) rotate(0deg);
     }
+
+    90% {
+        transform: translateX(0) rotate(0deg);
+    }
     
     100% {
         transform: translateX(-70px) rotate(0deg);
@@ -185,36 +190,31 @@ header.fade {
 /*Pseudoelement Sprechblase für Animation Hut*/
 .speech-bubble {
     position: absolute;
-    top: -120%;
-    left: 50%;
-    transform: translateX(-50%);
-    background: #fff;
-    border: 2px solid var(--color-primary);
-    border-radius: 12px;
-    padding: 8px 14px;
-    font-family: 'Cormorant';
-    font-size: 18px;
-    color: #000;
-    opacity: 1;
-    pointer-events: none;
-    transition: opacity 0.4s ease;
-     z-index: 2;
+    top: 10px;
+    right: 50px;
+    background: white;
+    padding: 10px;
+    border-radius: 30px;
+    font-family: Henny Penny;
+    font-size: small;
+    color: black;
+    z-index: 5;
+    transition: opacity 1s ease-in-out;
 }
 
 .speech-bubble::after {
     content: "";
     position: absolute;
+    width: 25px; 
+    height: 25px; 
+    background-image: url(img/speechbubble.png); 
+    background-size: cover; 
+    z-index: 1; 
     bottom: -10px;
-    left: 50%;
-    transform: translateX(-50%);
-    border-width: 10px;
-    border-style: solid;
-    border-color: #fff transparent transparent transparent;
+    left: 10px;
+   
 }
 
-.hat:hover .speech-bubble {
-    opacity: 1;
-}
 
 main {
     padding: 100px 23px;
