--- a/sara_jenny/style.css
+++ b/sara_jenny/style.css
@@ -170,10 +170,11 @@ header.fade {
 }
 
 .hat-img {
+    position: relative;
     height:100px;
     width: 90px;
-    position: relative;
     z-index: 10;
+    animation: hatAnimation 5s ease forwards;
 }
 
 /*Animation Hat*/
@@ -185,7 +186,7 @@ header.fade {
     animation: hatAnimation 5s cubic-bezier(0.42, 1.2, 0.58, 1) forwards;
 }
 
-@keyframes hatAnimation {
+@keyframes hatMove {
    
     0% {
         transform: translateX(0) rotate(0deg);
@@ -195,11 +196,7 @@ header.fade {
         transform: translateX(0) rotate(0deg);
     }
 
-    50% {
-        transform: translateX(0) rotate(180deg);
-    }
-
-    50% {
+    60% {
         transform: translateX(0) rotate(180deg);
     }
 
@@ -214,13 +211,33 @@ header.fade {
     100% {
         transform: translateX(-70px) rotate(0deg);
     }
+
 }
+
+.hatAnimation {
+    animation: hatMove 3s ease-in-out forwards;
+}
+
+
+@keyframes hatReset {
+    0% {
+      transform: translateX(-70px) rotate(0deg);
+    }
+    100% {
+      transform: translateX(70) rotate(0deg);
+    }
+  }
+
+  .hatReset {
+    animation: hatReset 2s step-end forwards;
+  } 
 
 /*Pseudoelement Sprechblase für Animation Hut*/
 .speech-bubble {
     position: absolute;
-    top: 10px;
-    right: 50px;
+    opacity: 0;
+    top: -2px;
+    left: 90%;
     background: white;
     padding: 10px;
     border-radius: 30px;
@@ -228,7 +245,6 @@ header.fade {
     font-size: small;
     color: black;
     z-index: 5;
-    transition: opacity 1s ease-in-out;
 }
 
 .speech-bubble::after {
@@ -354,6 +370,7 @@ main {
         margin-bottom: 30px;
     }
 }
+
 
 /*Mobile! (für micht Blödi)*/
 @media (max-width: 480px) {
