--- a/sara_jenny/style.css
+++ b/sara_jenny/style.css
@@ -174,7 +174,7 @@ header.fade {
     height:100px;
     width: 90px;
     z-index: 10;
-    animation: hatAnimation 5s ease forwards;
+    /* animation: hatAnimation 5s ease forwards; */
 }
 
 /*Animation Hat*/
@@ -183,7 +183,7 @@ header.fade {
     right: 100px;
     top: 10px;
     z-index: 10;
-    animation: hatAnimation 5s cubic-bezier(0.42, 1.2, 0.58, 1) forwards;
+    /* animation: hatAnimation 5s cubic-bezier(0.42, 1.2, 0.58, 1) forwards; */
 }
 
 @keyframes hatMove {
@@ -214,39 +214,25 @@ header.fade {
 
 }
 
+
+
 .hatAnimation {
-    animation: hatMove 3s ease-in-out forwards;
+    animation: hatMove 3s ease-in-out forwards, 
+               hatReset 1s ease-in-out 5s forwards;
 }
 
 
-@keyframes hatReset {
+ @keyframes hatReset {
     0% {
       transform: translateX(-70px) rotate(0deg);
     }
     100% {
-      transform: translateX(70) rotate(0deg);
+      transform: translateX(0) rotate(0deg);
     }
   }
 
-  .hatReset {
-    animation: hatReset 2s step-end forwards;
-  } 
 
 /*Pseudoelement Sprechblase für Animation Hut*/
-.speech-bubble {
-    position: absolute;
-    opacity: 0;
-    top: -2px;
-    left: 90%;
-    background: white;
-    padding: 10px;
-    border-radius: 30px;
-    font-family: Henny Penny;
-    font-size: small;
-    color: black;
-    z-index: 5;
-}
-
 .speech-bubble::after {
     content: "";
     position: absolute;
@@ -258,6 +244,35 @@ header.fade {
     bottom: -10px;
     left: 10px;
    
+}
+
+.speech-bubble {
+    position: absolute;
+    opacity: 0;
+    pointer-events: none;
+    top: -2px;
+    left: 90%;
+    background: white;
+    padding: 10px;
+    border-radius: 30px;
+    font-family: Henny Penny;
+    font-size: small;
+    color: black;
+    z-index: 5;
+}
+
+@keyframes showThenHideSpeechBubble {
+    0%     { opacity: 0; }
+    49.9%  { opacity: 0; }   /* First 3s hidden */
+    55%    { opacity: 0.2; } 
+    60%    { opacity: 0.7; }   /* Stay visible for 0.5s */
+    65%    { opacity: 1; }   /* Fade in */
+    83.3%  { opacity: 1; }   /* Stay visible for 2s */
+    100%   { opacity: 0; }   /* Fade out over last second */
+}
+
+.speech-bubble.animate-bubble {
+    animation: showThenHideSpeechBubble 6s ease-in-out forwards;
 }
 
 /*Backgorund Hogwarts*/
