--- a/sara_jenny/style.css
+++ b/sara_jenny/style.css
@@ -143,8 +143,10 @@ p{ /*ist Schrift p2 in Figma*/
     display: block;
     margin-right: auto;
     margin-left: auto;
-    width: 216.811px;
-    height: 216.811px;
+    max-width: 216.811px;
+    max-height: 216.811px;
+    width: 100%;
+    height: 100%;
     transform: rotate(131.186deg);
     flex-shrink: 0;
     aspect-ratio: 216.81/216.81;
@@ -350,7 +352,7 @@ main {
     }
 
     main {
-        padding-top: 90px;
+        padding-top: 20px;
         padding-left: 23px;
         padding-right: 23px;
         padding-bottom: 50px;
@@ -367,6 +369,17 @@ main {
     .TextIntroFull {
         margin-bottom: 30px;
     }
+
+    #cardForSpells {
+        max-width: 600px;
+        width: 100%;
+    }
+
+    #TextinCard {
+        margin-right: 80px;
+        margin-left: 80px;
+    }
+        
 }
 
 
@@ -440,8 +453,21 @@ main {
     #cardForSpells {
         background-image: url(img/Pergament_Hintergrund.jpeg);
         background-color: transparent;
-        width: 418px;
+        max-width: 418px;
+        width: 100%;
         flex-shrink: 0;
         aspect-ratio: 38/25;
+    }
+
+    #TextinCard {
+        margin-right: 50px;
+        margin-left: 50px;
+    }
+
+    #wandOne {
+        max-width: 150px;
+        max-height: 150px;
+        width: 100%;
+        height: 100%;   
     }
 }
