--- a/sara_jenny/style.css
+++ b/sara_jenny/style.css
@@ -295,6 +295,23 @@ main {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    padding-bottom: 30px;
+}
+
+.fade-out {
+    opacity: 0;
+    transition: opacity 0.5s ease;
+}
+
+.fade-in-start {
+    opacity: 0;
+    transform: scale(1.2);
+}
+
+.fade-in-end {
+    opacity: 1;
+    transform: scale(1);
+    transition: opacity 0.5s ease, transform 0.5s ease;
 }
 
 /*Fade in Text/Button*/
