--- a/sara_jenny/style.css
+++ b/sara_jenny/style.css
@@ -131,7 +131,9 @@ p{ /*ist Schrift p2 in Figma*/
     background-image: url(img/Pergament_Hintergrund.jpeg);
     background-size: cover;
     width: 664px;
+    flex-direction: column;
     flex-shrink: 0;
+    align-items: center;
     margin-top: 30px;
     margin-bottom: 30px;
     border-radius: 25px;
@@ -303,15 +305,21 @@ main {
     transition: opacity 0.5s ease;
 }
 
-.fade-in-start {
+.fade-in-zoom {
     opacity: 0;
     transform: scale(1.2);
+    animation: fadeInZoom 0.5s ease forwards;
 }
 
-.fade-in-end {
-    opacity: 1;
-    transform: scale(1);
-    transition: opacity 0.5s ease, transform 0.5s ease;
+@keyframes fadeInZoom {
+    from {
+        opacity: 0;
+        transform: scale(1.2);
+    }
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
 }
 
 /*Fade in Text/Button*/
