--- a/sara_jenny/style.css
+++ b/sara_jenny/style.css
@@ -368,7 +368,43 @@ main {
         top: 8px
     }
 
+    .speech-bubble {
+    top: -4px;
+    left: 90%;
+    size-adjust: 0.5;
+    font-size: x-small;
+    padding: 10px;
 
+}
+
+@keyframes showThenHideSpeechBubble {
+    0%     { opacity: 0; }
+    49.9%  { opacity: 0; }   /* First 3s hidden */
+    55%    { opacity: 0.2; } 
+    60%    { opacity: 0.7; }   /* Stay visible for 0.5s */
+    65%    { opacity: 1; }   /* Fade in */
+    83.3%  { opacity: 1; }   /* Stay visible for 2s */
+    100%   { opacity: 0; }   /* Fade out over last second*/
+}
+
+.speech-bubble.animate-bubble {
+    animation: showThenHideSpeechBubble 6s ease-in-out forwards;
+}
+
+.speech-bubble {
+    top: -2px;*/ /* Anpassen je nach Position*/
+    left: 40%; /* Statt 90% – weiter links positionieren */
+    transform: translateX(65%); /* Zentriert die Blase relativ zu ihrem Punkt */
+    font-size: 10px;
+    padding: 10px;
+  } 
+
+  .speech-bubble::after {
+    left: 20px; /* Den kleinen Pfeil ggf. auch anpassen */
+    bottom: -8px;
+    width: 20px;
+    height: 20px;
+  }
     /*Hintergrund: Hogwarts*/
     body {
         background-image: url(img/hogwarts_02.jpeg);
@@ -427,23 +463,38 @@ main {
     }
 
 
-    /*Styling + Animation des Hutes */
+    /*Styling + Animation des Hutes*/
    .hat {
-        height: 60px;
-        width: 54px;
+        height: 30px;
+        /*width: 22px;*/
+        transform-origin: center center;
     }
 
     .hat-animation {
-        right: 35px;
-        top: 6px;
+        right: 50px;
+        top: 12px;
     }
 
+    .speech-bubble {
+    top: -2px; /* Anpassen je nach Position */
+    left: 100%; /* Statt 90% – weiter links positionieren */
+    transform: translateX(70%); /* Zentriert die Blase relativ zu ihrem Punkt */
+    font-size: 10px;
+    padding: 10px;
+  }
+
+  .speech-bubble::after {
+    left: 20px; /*Den kleinen Pfeil ggf. auch anpassen */
+    bottom: -8px;
+    width: 20px;
+    height: 20px;
+  }
 
     /*Hintergrund: Hogwarts*/
     body {
         background-image: url(img/hogwarts_02.jpeg);
         background-position: -580px;
-        background-size: cover;  
+        background-size: cover; 
         background-repeat: no-repeat;
         min-height: 130vh;
         overflow: normal;
@@ -482,7 +533,7 @@ main {
         align-items: center;
         background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='473' height='96' viewBox='0 0 473 96'><path d='M87 0L0 48.5L87 95.5H384.5L473 48.5L384.5 0H87Z' fill='%23634832'/></svg>");
         background-repeat: no-repeat;
-        background-size: contain;      
+        background-size: contain;    
         background-position: center;
         background-color: transparent;
         border: none;
@@ -513,6 +564,6 @@ main {
         max-width: 150px;
         max-height: 150px;
         width: 100%;
-        height: 100%;   
+        height: 100%;
     }
-}
+}; 
