--- a/sara_jenny/style.css
+++ b/sara_jenny/style.css
@@ -392,7 +392,7 @@ main {
 }
 
 .speech-bubble {
-    top: -2px;*/ /* Anpassen je nach Position*/
+    top: -2px; /* Anpassen je nach Position*/
     left: 40%; /* Statt 90% – weiter links positionieren */
     transform: translateX(65%); /* Zentriert die Blase relativ zu ihrem Punkt */
     font-size: 10px;
