--- a/sara_jenny/style.css
+++ b/sara_jenny/style.css
@@ -355,14 +355,7 @@ main {
             --type-size-p1: 27px;
             --type-size-h1: 52px;
     }
-
-
-    /*Styling + Animation des Hutes */
-     .hat {
-        height: 80px;
-        width: 72px;
-    }
-
+    
     .hat-animation {
         right: 60px;
         top: 8px
@@ -370,29 +363,15 @@ main {
 
     .speech-bubble {
     top: -4px;
-    left: 90%;
+    left: 50%;
     size-adjust: 0.5;
     font-size: x-small;
     padding: 10px;
 
 }
 
-@keyframes showThenHideSpeechBubble {
-    0%     { opacity: 0; }
-    49.9%  { opacity: 0; }   /* First 3s hidden */
-    55%    { opacity: 0.2; } 
-    60%    { opacity: 0.7; }   /* Stay visible for 0.5s */
-    65%    { opacity: 1; }   /* Fade in */
-    83.3%  { opacity: 1; }   /* Stay visible for 2s */
-    100%   { opacity: 0; }   /* Fade out over last second*/
-}
-
-.speech-bubble.animate-bubble {
-    animation: showThenHideSpeechBubble 6s ease-in-out forwards;
-}
-
 .speech-bubble {
-    top: -2px; /* Anpassen je nach Position*/
+    top: -2px;*/ /* Anpassen je nach Position*/
     left: 40%; /* Statt 90% – weiter links positionieren */
     transform: translateX(65%); /* Zentriert die Blase relativ zu ihrem Punkt */
     font-size: 10px;
@@ -417,7 +396,7 @@ main {
 
 
     /*Styling des Main Contents und Schriften*/
-    main {
+   main {
         padding-top: 20px;
         padding-left: 23px;
         padding-right: 23px;
@@ -434,13 +413,13 @@ main {
 
 
     /*Styling des Textes, der zu Beginn des Generators angezeigt wird*/
-    .TextIntroFull {
+   .TextIntroFull {
         margin-bottom: 30px;
     }
 
 
     /*Styling der Karte und des darin enthaltenen Textes*/
-    #cardForSpells {
+   #cardForSpells {
         max-width: 600px;
         width: 100%;
     }
@@ -449,7 +428,6 @@ main {
         margin-right: 80px;
         margin-left: 80px;
     }
-        
 }
 
 
@@ -462,14 +440,6 @@ main {
         --type-size-h1: 40px;
     }
 
-
-    /*Styling + Animation des Hutes*/
-   .hat {
-        height: 30px;
-        /*width: 22px;*/
-        transform-origin: center center;
-    }
-
     .hat-animation {
         right: 50px;
         top: 12px;
@@ -477,8 +447,8 @@ main {
 
     .speech-bubble {
     top: -2px; /* Anpassen je nach Position */
-    left: 100%; /* Statt 90% – weiter links positionieren */
-    transform: translateX(70%); /* Zentriert die Blase relativ zu ihrem Punkt */
+    left: 35%; /* Statt 90% – weiter links positionieren */
+    transform: translateX(55%); /* Zentriert die Blase relativ zu ihrem Punkt */
     font-size: 10px;
     padding: 10px;
   }
