--- a/sara_jenny/style.css
+++ b/sara_jenny/style.css
@@ -178,6 +178,9 @@ header.fade {
     z-index: 10;
 }
 
+header {
+    contain: layout paint;;
+}
 
 /*Animation Hat*/
 .hat-animation {
@@ -185,6 +188,9 @@ header.fade {
     right: 100px;
     top: 10px;
     z-index: 10;
+    will-change: transform;
+    backface-visibility: hidden;
+    transform-style: preserve-3d;
 }
 
 @keyframes hatMove {
@@ -283,6 +289,9 @@ body {
     background-attachment: fixed;
     min-height: 100vh;             
     margin: 0;
+    padding: 0;
+    position: relative;
+    overflow-x: hidden; /* Verhindert horizontales Scrollen */
 }
 
 
