--- a/sara_jenny/style.css
+++ b/sara_jenny/style.css
@@ -180,7 +180,7 @@ header.fade {
 }
 
 
-/*Animation Hat*/
+/*Animation Hut*/
 .hat-animation {
     position: absolute;
     right: 100px;
@@ -265,12 +265,12 @@ header.fade {
 
 @keyframes showThenHideSpeechBubble {
     0%     { opacity: 0; }
-    49.9%  { opacity: 0; }   /* First 3s hidden */
+    49.9%  { opacity: 0; }
     55%    { opacity: 0.2; } 
-    60%    { opacity: 0.7; }   /* Stay visible for 0.5s */
-    65%    { opacity: 1; }   /* Fade in */
-    83.3%  { opacity: 1; }   /* Stay visible for 2s */
-    100%   { opacity: 0; }   /* Fade out over last second */
+    60%    { opacity: 0.7; }
+    65%    { opacity: 1; }   
+    83.3%  { opacity: 1; }   
+    100%   { opacity: 0; }   
 }
 
 .speech-bubble.animate-bubble {
@@ -369,28 +369,28 @@ main {
     }
 
     .speech-bubble {
-    top: -4px;
-    left: 50%;
-    size-adjust: 0.5;
-    font-size: x-small;
-    padding: 10px;
+        top: -4px;
+        left: 50%;
+        size-adjust: 0.5;
+        font-size: x-small;
+        padding: 10px;
 
-}
+    }
 
-.speech-bubble {
-    top: -2px; /* Anpassen je nach Position*/
-    left: 40%; /* Statt 90% – weiter links positionieren */
-    transform: translateX(65%); /* Zentriert die Blase relativ zu ihrem Punkt */
-    font-size: 10px;
-    padding: 10px;
-  } 
+    .speech-bubble {
+        top: -2px; /* Anpassen je nach Position*/
+        left: 40%; /* Statt 90% – weiter links positionieren */
+        transform: translateX(65%); /* Zentriert die Blase relativ zu ihrem Punkt */
+        font-size: 10px;
+        padding: 10px;
+    } 
 
-  .speech-bubble::after {
-    left: 20px; /* Den kleinen Pfeil ggf. auch anpassen */
-    bottom: -8px;
-    width: 20px;
-    height: 20px;
-  }
+    .speech-bubble::after {
+        left: 20px; /* Den kleinen Pfeil ggf. auch anpassen */
+        bottom: -8px;
+        width: 20px;
+        height: 20px;
+    }
     /*Hintergrund: Hogwarts*/
     body {
         background-image: url(img/hogwarts_02.jpeg);
